syntax = "proto3";

option csharp_namespace = "NewBankServer.Protos";
import "Protos/common.proto";
import "google/protobuf/timestamp.proto";

package protos.sessionCRUD;

service SessionCRUD {
  rpc AddSession (SessionRequest) returns (common.Empty);
  rpc RemoveSession (SessionRequest) returns (common.Empty);
  rpc IsValidSession (SessionRequest) returns (ValidSessionResponse);
  rpc GetSessions (common.Empty) returns (Sessions);
  rpc ClearSessions (common.Empty) returns (common.Empty);
}

message SessionRequest {
  string sessionId = 1;
  string username = 2;
  google.protobuf.Timestamp logInDateTime = 3;
}

message ValidSessionResponse {
  bool valid = 1;
}

message Sessions {
  repeated SessionRequest items = 1;
}